# sqlite3-game-assets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bhh-asset-packer.hpp
scripts/: CMakeLists.txt  generate_dbs.cmake  shared_functions.cmake
scripts/asset-creator/: CMakeLists.txt  main.cpp
scripts/key-converter/: CMakeLists.txt  main.cpp
src/: bhh-asset-packer.cpp
test/: CMakeLists.txt  test.cpp
test/assets/db1/sound/: file1.txt  file2.txt
test/assets/db1/sound/dir/: file.txt
test/assets/db1/sprites/: file1.txt  file2.txt
test/assets/db1/sprites/dir/: file.txt
test/assets/db2/: KEY
test/assets/db2/sound/: file1.txt  file2.txt
test/assets/db2/sound/dir/: file.txt
test/assets/db2/sprites/: file1.txt  file2.txt
test/assets/db2/sprites/dir/: file.txt
