cmake_minimum_required(VERSION 3.16)
cmake_policy(SET CMP0135 NEW) # Annoying
option(BHH_ASSET_PACKER_SANITIZE_ADDRESS "Add -fsanitize=address" OFF)
if (BHH_ASSET_PACKER_SANITIZE_ADDRESS)
  add_compile_options(-fsanitize=address)
  add_link_options(-fsanitize=address)
endif(BHH_ASSET_PACKER_SANITIZE_ADDRESS)
add_subdirectory(external)
project(bhh_sqlite3_game_assets CXX)
set(CMAKE_CXX_STANDARD 17)
add_library(${PROJECT_NAME} STATIC ${CMAKE_CURRENT_SOURCE_DIR}/src/bhh-asset-packer.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(${PROJECT_NAME} PUBLIC sqlite3mcLib)
target_link_libraries(${PROJECT_NAME} PUBLIC StringObfuscator)
add_subdirectory(scripts/asset-creator)
add_subdirectory(scripts)
option(BHH_ASSET_PACKER_BUILD_TESTS "Build tests" ON)
if (BHH_ASSET_PACKER_BUILD_TESTS)
  add_subdirectory(test)
endif()
